removed form pieces