@@ -5,6 +5,7 @@ import org.junit.jupiter.api.Test;
 import java.awt.*;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -16,10 +17,10 @@ class KingTest {
 
     @Test
     void legalMoveWillWork() throws Exception {
-        kingStraight = new King(new Point(4,4), PieceColor.WHITE);
-        King kingDiagonal = new King(new Point(5, 5), PieceColor.BLACK);
-        Pawn cannonFodder = new Pawn(new Point(4,3), PieceColor.BLACK);
-        board = Board.getConsumeBoard(Arrays.asList(kingDiagonal, kingStraight, cannonFodder), List.of(new Point(3,0), new Point(3,7)));
+        kingStraight = new King(4, PieceColor.WHITE);
+        King kingDiagonal = new King(5, PieceColor.BLACK);
+        Pawn cannonFodder = new Pawn(PieceColor.BLACK);
+        board = Board.getConsumeBoard(Arrays.asList(kingDiagonal, kingStraight, cannonFodder), List.of(new Point(5, 5), new Point(4, 4), new Point(4, 3)), List.of(new Point(3,0), new Point(3,7)));
         boolean straightIsLegal;
         boolean diagonalIsLegal;
 
@@ -43,7 +44,7 @@ class KingTest {
 
     @Test
     void castlingIsLegal() throws Exception {
-        board = Board.getConsumeBoard(new ArrayList<>(), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0), new Point(5, 0), new Point(6, 0)));
+        board = Board.getConsumeBoard(new ArrayList<>(), new ArrayList<>(), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0), new Point(5, 0), new Point(6, 0)));
         boolean castlingToTheLeftIsLegal;
         boolean castlingToTheRightIsLegal;
 
@@ -56,7 +57,7 @@ class KingTest {
 
     @Test
     void castlingIsIllegalIfKingHasMoved() throws Exception {
-        board = Board.getConsumeBoard(new ArrayList<>(), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0)));
+        board = Board.getConsumeBoard(new ArrayList<>(), new ArrayList<>(),List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0)));
         boolean castlingIsLegal;
         King king = (King) board.getPiece(new Point(4, 0));
         king.moved();
@@ -68,7 +69,7 @@ class KingTest {
 
     @Test
     void castlingIsIllegalIfRookMoved() throws Exception {
-        board = Board.getConsumeBoard(new ArrayList<>(), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0)));
+        board = Board.getConsumeBoard(new ArrayList<>(), new ArrayList<>(),List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0)));
         boolean castlingIsLegal;
         Rook rook = (Rook) board.getPiece(new Point(0, 0));
         rook.moved();
@@ -80,7 +81,7 @@ class KingTest {
 
     @Test
     void castlingIsIllegalIfKingWasInCheck() throws Exception {
-        board = Board.getConsumeBoard(new ArrayList<>(), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0)));
+        board = Board.getConsumeBoard(new ArrayList<>(), new ArrayList<>(), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0)));
         boolean castlingIsLegal;
         King king = (King) board.getPiece(new Point(4, 0));
         king.setToIsInCheck();
@@ -92,7 +93,7 @@ class KingTest {
 
     @Test
     void castlingIsIllegalIfKingWillBeInCheckOnTheWay() throws Exception {
-        board = Board.getConsumeBoard(List.of(new Rook(new Point(2, 3), PieceColor.WHITE)), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0), new Point(2, 1)));
+        board = Board.getConsumeBoard(Collections.singletonList(new Rook(PieceColor.WHITE)), Collections.singletonList(new Point(2, 3)), List.of(new Point(1, 0), new Point(2, 0), new Point(3, 0), new Point(2, 1)));
         boolean castlingIsLegal;
 
         castlingIsLegal = board.isLegalMove(new Point(4, 0), new Point(1, 0), 1);
