@@ -1,6 +1,5 @@
 package com.akivaGrobman.Game.Client.Backend.GameObjects.Pieces;
 
-import com.akivaGrobman.Game.Client.Backend.Exceptions.IllegalMoveException;
 import com.akivaGrobman.Game.Client.Backend.GameObjects.Board.Board;
 import org.junit.jupiter.api.Test;
 
@@ -8,8 +7,10 @@ import java.awt.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class RookTest {
 
@@ -18,8 +19,8 @@ class RookTest {
 
     @Test
     void legalMoveWorks() throws Exception {
-         rook = new Rook(new Point(0, 4), PieceColor.BLACK);
-         board = Board.getConsumeBoard(Collections.singletonList(rook), Collections.singletonList(new Point(0, 1)));
+         rook = new Rook(PieceColor.BLACK);
+         board = Board.getConsumeBoard(Collections.singletonList(rook), Collections.singletonList(new Point(0, 4)), Collections.singletonList(new Point(0, 1)));
          boolean isLegal;
 
          isLegal = rook.isLegalMove(new Point(0, 4), new Point(4, 4), board);
@@ -29,9 +30,9 @@ class RookTest {
 
     @Test
     void willNotJumpOverPieces() throws Exception {
-        Rook secondRook = new Rook(new Point(4, 4), PieceColor.WHITE);
-        Pawn blocking = new Pawn(new Point(5, 4), PieceColor.BLACK);
-        board = Board.getConsumeBoard(Arrays.asList(secondRook, blocking), new ArrayList<>());
+        Rook secondRook = new Rook(PieceColor.WHITE);
+        Pawn blocking = new Pawn(PieceColor.BLACK);
+        board = Board.getConsumeBoard(Arrays.asList(secondRook, blocking), List.of(new Point(4, 4), new Point(5, 4)),new ArrayList<>());
         rook = (Rook) board.getPiece(new Point(0, 0));
         boolean firstRookMoveIsLegal;
         boolean secondRookMoveIsLegal;
